# GDLauncher

./: .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: nodejs.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: gdlauncher.key  gdlauncher.key.pub
src-tauri/icons/: icon.icns
src/assets/: index.html
