[package]
name = "gdlauncher"
version = "1.2.0"
description = "GDLauncher is simple, yet powerful Minecraft custom launcher with a strong focus on the user experience."
authors = ["GorillaDevs <davide@gdevs.io>"]
license = "GPL-3.0"
repository = "https://github.com/gorilla-devs/GDLauncher"
default-run = "gdlauncher"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.13", features = [] }
libium = "1.18.2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.15", features = ["api-all", "system-tray"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
